--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-gunicorn==19.9.0
-Werkzeug==0.15.6
-Jinja2==2.10.1
-itsdangerous==1.1.0
-MarkupSafe==1.1.1
-pdfkit==0.6.1
-numpy==1.21.0
-pandas==1.2.0
-Flask==1.1.2
-matplotlib==3.4.2
+click==8.1.3
+Flask==2.2.2
+gunicorn==20.1.0
+importlib-metadata==6.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+numpy==1.24.1
+pandas==1.5.2
+pdfkit==1.0.0
+python-dateutil==2.8.2
+pytz==2022.7
+six==1.16.0
+Werkzeug==2.2.2
+zipp==3.11.0
